--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.7.0",
     "@clerk/nextjs": "^6.19.1",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.7.0",
