--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.7.0",
     "@clerk/nextjs": "^6.19.1",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.7.0",
@@ -17,9 +16,11 @@
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-progress": "^1.1.6",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "epubjs": "^0.3.93",
     "jotai": "^2.12.4",
     "lucide-react": "^0.508.0",
     "motion": "^12.10.1",
