--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.7.0",
+    "@aws-sdk/client-s3": "^3.808.0",
     "@clerk/nextjs": "^6.19.1",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.7.0",
